Login and registration backend

--- a/eeducation/src/main/resources/application.properties
+++ b/eeducation/src/main/resources/application.properties
@@ -6,3 +6,10 @@ spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto = create-drop
 spring.datasource.initialization-mode=always
 jwt.secret=SOmeCraZ_Y+TOpSecReT_NoOneCouldbreak
+
+spring.mail.host= smtp.gmail.com
+spring.mail.username=eeducation.global@gmail.com
+spring.mail.password=TeskaSifra1
+spring.mail.port=587
+spring.mail.properties.mail.smtp.starttls.enable = true
+spring.mail.properties.mail.smtp.auth = true
