--- a/eeducation/src/main/resources/application.properties
+++ b/eeducation/src/main/resources/application.properties
@@ -3,6 +3,11 @@ spring.datasource.url=jdbc:mysql://localhost:3306/eeducation?useSSL=false&create
 spring.datasource.username=root
 spring.datasource.password=root
 
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port=27017
+spring.data.mongodb.database=Lessons
+
+
 spring.jpa.hibernate.ddl-auto = create-drop
 spring.datasource.initialization-mode=always
 jwt.secret=SOmeCraZ_Y+TOpSecReT_NoOneCouldbreak
