--- a/eeducation-front/package.json
+++ b/eeducation-front/package.json
@@ -26,6 +26,8 @@
     "angular-jwt": "^0.1.11",
     "moment": "^2.24.0",
     "ng-pick-datetime": "~7.0.0",
+    "ngx-quill": "^12.0.1",
+    "quill": "^1.3.7",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
